fixing broken layout of money input in some cases

--- a/frontend/src/styles/vars.scss
+++ b/frontend/src/styles/vars.scss
@@ -24,6 +24,7 @@ $white: #fff;
 
 $components-color: #1faef3;
 $components-border-color: #dcdfe6;
+$components-border-radius: 2px;
 
 $primary-text-color: $primary-color-lighter-i;
 $secondary-text-color: $primary-color-lighter-ii;
